Clases/Clase07/k8s/app-ingress2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-deploy2
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          command: ["sh","-c","echo Soy la app 2 desde $HOSTNAME > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
---
apiVersion: v1
kind: Service
metadata:
  name: app-v2
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 9090
      targetPort: 80
      protocol: TCP
