Clases/Clase07/k8s/ingress-rules-paths.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: app-v1
          servicePort: 8080
      - path: /api/*
        backend:
          serviceName: app-v2
          servicePort: 9090
