Clases/Clase07/k8s/ingress-rules.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: front.app.com
    http:
      paths:
      - backend:
          serviceName: app-v1
          servicePort: 8080
  - host: back.app.com
    http:
      paths:
      - backend:
          serviceName: app-v2
          servicePort: 9090
